test/sema/lambdas/lambda_self_param.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:6: error: 'self' parameter is only allowed in methods
  ->(self) {
    self.x;
  };
}
